--- a/main.css
+++ b/main.css
@@ -9,7 +9,21 @@ body {
     margin: 0 auto; /* מרווח מהעליון והתחתון */
     padding: 0 20px; /* מרווח מהצדדים */
     box-sizing: border-box; /* כולל padding ו-border בגודל */
-    
+    padding: 150px;
+    border-radius: 5px;
+    border: 1px solid #1c1c1c;
+    box-sizing: border-box; 
+}
+h1{
+    padding: 25px;
+    text-align: center;
+    margin-top: 20px;
+    color: #000000; 
+
+}
+h3 {
+    text-align: center;
+    color: #000000; 
 }
 #id_form{
     max-width: 600px;
@@ -47,7 +61,7 @@ body {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
-    box-sizing: border-box; /* כולל padding ו-border בגודל */
+    box-sizing: border-box; 
 }
 label{
     color: rgb(0, 0, 0);
@@ -64,6 +78,7 @@ label{
     border: 1px solid #261765;
     box-sizing: border-box; /* כולל padding ו-border בגודל */
 }
+/*כפתורים*/
 button {
     background-color: #e16f28; /* אדום-כתום */
     color: #fff; /* טקסט לבן */
@@ -78,7 +93,7 @@ button:hover {
     background-color: #dd8046; /* אדום-כתום */
 }
 .btn{
-    margin-left: 18%;
+    margin-left: 43%;
     margin-top: 20px;
 
 }
@@ -107,7 +122,7 @@ button:hover {
     display: inline-block;
     width: 60px;
     height: 34px;
-    margin-left: 20%;
+    margin-left: 45%;
     margin-top: 5%;
 }
 
